# GameSK2

./: CMakeLists.txt  GameStructs.h  README.md  main.cpp  originalcmakelists  server.cpp
resources/: config.cnf
